--- a/Battleships/MainWindow.xaml
+++ b/Battleships/MainWindow.xaml
@@ -5,21 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Battleships"
         mc:Ignorable="d"
-        Title="BattleShips" Height="500" Width="870" MinWidth="865"
-        xml:space="preserve" Icon="ship.ico" Loaded="WindowLoaded">
+        Title="BattleShips" Height="500" Width="890" MinWidth="865"
+        xml:space="preserve" Icon="ship.ico" Loaded="WindowLoaded" ResizeMode="NoResize">
+    <Window.Resources>
+        <Style TargetType="{x:Type Paragraph}">
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Focusable" Value="False"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-
         <RichTextBox Cursor="Arrow" BorderThickness="0" Focusable="False" IsReadOnly="True" IsReadOnlyCaretVisible="True" Block.LineHeight="16"  Background="#FF383838" Foreground="White" BorderBrush="Black" FontFamily="Consolas" Grid.ColumnSpan="2" IsInactiveSelectionHighlightEnabled="True">
-            <RichTextBox.Resources>
-                <Style TargetType="{x:Type Paragraph}">
-                    <Setter Property="Margin" Value="0" />
-                    <Setter Property="FontSize" Value="16" />
-                    <Setter Property="Focusable" Value="False"/>
-                </Style>
-            </RichTextBox.Resources>
             <FlowDocument>
-                    <Paragraph>                     Gracz                                             Komputer</Paragraph>
-                    <Paragraph>     a   b   c   d   e   f   g   h   i   j              a   b   c   d   e   f   g   h   i   j</Paragraph>
+                    <Paragraph>                     Gracz                                             Komputer                </Paragraph>
+                    <Paragraph>     a   b   c   d   e   f   g   h   i   j              a   b   c   d   e   f   g   h   i   j  </Paragraph>
                     <Paragraph>   ┌───┬───┬───┬───┬───┬───┬───┬───┬───┬───┐          ┌───┬───┬───┬───┬───┬───┬───┬───┬───┬───┐</Paragraph>
                     <Paragraph> 1 │   │   │   │   │   │   │   │   │   │   │        1 │   │   │   │   │   │   │   │   │   │   │</Paragraph>
                     <Paragraph>   ├───┼───┼───┼───┼───┼───┼───┼───┼───┼───┤          ├───┼───┼───┼───┼───┼───┼───┼───┼───┼───┤</Paragraph>
@@ -44,24 +43,10 @@
             </FlowDocument>
         </RichTextBox>
         <RichTextBox Cursor="Arrow" BorderThickness="0" Focusable="False" x:Name="gameScreen" IsReadOnly="True" Block.LineHeight="16"  Background="Transparent" Foreground="White" BorderBrush="Black" FontFamily="Consolas" Grid.ColumnSpan="2" IsInactiveSelectionHighlightEnabled="True">
-            <RichTextBox.Resources>
-                <Style TargetType="{x:Type Paragraph}">
-                    <Setter Property="Margin" Value="0" />
-                    <Setter Property="FontSize" Value="16" />
-                    <Setter Property="Focusable" Value="False"/>
-                </Style>
-            </RichTextBox.Resources>
             <FlowDocument>
             </FlowDocument>
         </RichTextBox>
          <RichTextBox Cursor="Arrow" BorderThickness="0" Focusable="False" IsReadOnly="True" Block.LineHeight="16"  Background="Transparent" Foreground="White" BorderBrush="Black" FontFamily="Consolas" Grid.ColumnSpan="2" IsInactiveSelectionHighlightEnabled="True">
-            <RichTextBox.Resources>
-                <Style TargetType="{x:Type Paragraph}">
-                    <Setter Property="Margin" Value="0" />
-                    <Setter Property="FontSize" Value="16" />
-                    <Setter Property="Focusable" Value="False"/>
-                </Style>
-            </RichTextBox.Resources>
             <FlowDocument>
                     <Paragraph><Run Foreground="#FF90BB46" x:Name="playerCursor" /></Paragraph>
             </FlowDocument>
